fix: validator status alignment

--- a/src/components/Rewards/Validators/Validators.module.scss
+++ b/src/components/Rewards/Validators/Validators.module.scss
@@ -48,6 +48,7 @@
         width: 140px;
         padding: 0px 20px;
         text-transform: capitalize;
+        text-align: center;
     }
 
     .header {
